# structured-interpreter

./: pyproject.toml
structured_interpreter/: llm.py
