[tool.poetry]
name = "structured-interpreter"
version = "0.1.0"
description = ""
authors = ["Anton Solbjørg <4324290+Notnaton@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
