[tool.poetry]
name = "structured-interpreter"
version = "0.1.0"
description = ""
authors = ["Anton Solbjørg <4324290+Notnaton@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
litellm = "^1.35.17"

[tool.poetry.scripts]
llm = "structured_interpreter.llm:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
